--- a/src/viewes/AuthView.css
+++ b/src/viewes/AuthView.css
@@ -12,5 +12,15 @@
     text-align: center;
 }
 
-.AuthView > .button {
+.AuthView > .input {
+    height: 2em;
+    font-size: 1.5em;
+    width: 15em;
+    border:none;
+    background-image:none;
+    background-color:transparent;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    text-underline: gray;
 }
